Fri Mar 28 01:05:27 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* login.c (NO_MOTD): If we're on an SGI machine, don't do the MOTD
		or MAILCHECK thing, since it's done by /etc/cshrc magic.
		(SGI's don't define __SVR4, even though it's SVR4
		derived).  [krb5-appl/158]

	* krlogin.c (try_normal): When falling back to the normal rlogin,
		clear the signal mask, so that the child rlogin handles
		SIGUSR1 (which is used for window size changes) correctly.
		[krb5-appl/335]

Tue Mar 18 12:34:03 1997  Sam Hartman  <hartmans@luminous.MIT.EDU>

 [326]	* login.c(doit):  Preserve terminal even without -p.

Thu Feb 27 10:58:07 1997  Sam Hartman  <hartmans@luminous.MIT.EDU>

	* krshd.c: Allow user to login with / as home directory if homedir
 	not found. [167]

Sat Feb 22 00:54:06 1997  Sam Hartman  <hartmans@luminous.MIT.EDU>

	* krlogin.c (mode): Clean up Posix terminal handling for NetBSD.

Tue Feb 18 18:03:55 1997  Richard Basch  <basch@lehman.com>

	* krcp.c: Replace krb5_xfree with krb5_free_data_contents
	* kcmd.c krlogind.c krshd.c: Use free instead of internal krb5_xfree
	* krlogin.c: Fixed 8bit character flow under Solaris
	* kcmd.c: getport() lets the OS pick the port rather than scanning
	* krshd.c: Don't bother to set lport before calling getport(&lport)

Sat Dec 28 21:06:43 1996  Sam Hartman  <hartmans@luminous.MIT.EDU>

	* login.c: Force environment variables like HOME to be set even if
 	-p given.

Wed Feb  5 20:56:03 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Tue Dec 24 16:08:41 1996  Tom Yu  <tlyu@mit.edu>

	* configure.in: Fix up "test $ac_cv_c_cross" to deal with
	autoconf-2.12, since that variable can be set to a null string.

Fri Dec  6 00:53:08 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* v4rcp.c: Extend the platform-specific braindamage so that
 		FreeBSD works.  This whole file is eventually going to
 		need serious rototilling to make it even vaguely correct.
		[PR #284]
