@@ -1,3 +1,10 @@
+Thu Jun  5 15:56:54 1997  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* login.c: Always use the new tty line discpline.  [krb5-appl/428]
+
+	* login.c: If a hangup signal is received, pass it onto the child.
+		[krb5-appl/432]
+
 Fri Mar 28 01:05:27 1997  Theodore Y. Ts'o  <tytso@mit.edu>
 
 	* login.c (NO_MOTD): If we're on an SGI machine, don't do the MOTD
